[gd_scene load_steps=25 format=3 uid="uid://d2urtjnts4y70"]

[ext_resource type="Script" path="res://Scene/orc_shaman.gd" id="1_sl1k6"]
[ext_resource type="Texture2D" uid="uid://bq3fe4w42pl8x" path="res://ASSETS/ORC/Craftpix_Orc/Orc_Shaman/Idle.png" id="1_tdrb5"]
[ext_resource type="Texture2D" uid="uid://di8e12n8ajyjc" path="res://ASSETS/ORC/Craftpix_Orc/Orc_Shaman/Dead.png" id="2_ktsre"]
[ext_resource type="Texture2D" uid="uid://btf3axqsco10h" path="res://ASSETS/ORC/Craftpix_Orc/Orc_Shaman/Walk.png" id="4_8so0s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eo8x2"]
atlas = ExtResource("2_ktsre")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlrtq"]
atlas = ExtResource("2_ktsre")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_od2we"]
atlas = ExtResource("2_ktsre")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqvnb"]
atlas = ExtResource("2_ktsre")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_odept"]
atlas = ExtResource("2_ktsre")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3blfi"]
atlas = ExtResource("1_tdrb5")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iat7j"]
atlas = ExtResource("1_tdrb5")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3eog"]
atlas = ExtResource("1_tdrb5")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7nvd"]
atlas = ExtResource("1_tdrb5")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmrou"]
atlas = ExtResource("1_tdrb5")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulssq"]
atlas = ExtResource("4_8so0s")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tc4f"]
atlas = ExtResource("4_8so0s")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc2eo"]
atlas = ExtResource("4_8so0s")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jftg"]
atlas = ExtResource("4_8so0s")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qka7d"]
atlas = ExtResource("4_8so0s")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwme4"]
atlas = ExtResource("4_8so0s")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_awutp"]
atlas = ExtResource("4_8so0s")
region = Rect2(576, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_jcykt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo8x2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlrtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od2we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqvnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odept")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3blfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iat7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3eog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7nvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmrou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulssq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tc4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc2eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jftg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qka7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwme4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awutp")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y838s"]
size = Vector2(45, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lffln"]
size = Vector2(11, 3)

[node name="RigidBody2D" type="RigidBody2D"]
script = ExtResource("1_sl1k6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-7, -87)
scale = Vector2(1.79167, 1.79167)
sprite_frames = SubResource("SpriteFrames_jcykt")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -48)
shape = SubResource("RectangleShape2D_y838s")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, -100)
shape = SubResource("RectangleShape2D_lffln")

[node name="RayCastKanan" type="RayCast2D" parent="."]
position = Vector2(1, -53)
target_position = Vector2(37, 0)

[node name="RayCastKiri" type="RayCast2D" parent="."]
position = Vector2(1, -53)
target_position = Vector2(-50, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
